--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/pet_bot
+spring.datasource.username=student
+spring.datasource.password=qwerty
+spring.jpa.show-sql=true
