added processing of answers' pictures

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/PSBD
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=PetShopBot
+spring.datasource.password=123
 spring.jpa.show-sql=true
 server.port=8080
 path.to.pictures.folder=pictures
 
-telegram.bot.token=
+telegram.bot.token=5377357513:AAG_x-NQmG2y2l0cWItw2g0DzJC4uJtBFoo
 
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
